<resources>
    <string name="app_name">calculator</string>
    <string name="delete_all">AC</string>
    <string name="open_parenthesis">(</string>
    <string name="close_parenthesis">)</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="comma">,</string>
    <string name="number_0">0</string>
    <string name="delete">DEL</string>
    <string name="radian">RAD</string>
    <string name="racine">√</string>
    <string name="pi">π</string>
    <string name="percentage">%</string>
    <string name="power">^</string>
    <string name="exclamation">!</string>
    <string name="sinus">SIN</string>
    <string name="cosinus">COS</string>
    <string name="tangent">TAN</string>
    <string name="exponential">e</string>
    <string name="logarithmic">LOG</string>
    <string name="logarithmic_nip">LN</string>
    <string name="hint">(1+2)*4</string>
    <string name="history">history</string>
</resources>